# LIA_RAL

./: .gitignore  DOCUMENTATION  LIA_RAL_2005.sln  README  README.md  config.txt  config.txt.ex  configure.ac  configure.in  doxygen.cfg
LIA_RAL/: AUTHORS  README
LIA_RAL/LIA_SpkTools/: whatsnew.txt
LIA_RAL/doc/: DOC_LIA_SpkDet.tex  config.txt
LIA_SpkDet/: Makefile  Makefile.am
LIA_SpkDet/ComputeJFAStats/src/: ComputeJFAStats.cpp  ComputeJFAStatsMain.cpp  Makefile.am
LIA_SpkDet/ComputeNorm/src/: ComputeNorm.cpp  ComputeNormMain.cpp  Makefile.am
LIA_SpkDet/ComputeTest/src/: ComputeTest.cpp  ComputeTestMain.cpp  Makefile.am
LIA_SpkDet/CovIntra/: Makefile
LIA_SpkDet/CovIntra/src/: CovIntra.cpp  Makefile.am  README
LIA_SpkDet/CovIntra/src/SVDLIBC/: Makefile.am  svdlib.h
LIA_SpkDet/EigenChannel/src/: EigenChannel.cpp  EigenChannelMain.cpp  Makefile.am
LIA_SpkDet/EigenVoice/src/: EigenVoice.cpp  EigenVoiceMain.cpp  Makefile.am
LIA_SpkDet/EnergyDetector/src/: EnergyDetector.cpp  Makefile.am
LIA_SpkDet/IvExtractor/src/: IvExtractor.cpp  IvExtractorMain.cpp  Makefile.am
LIA_SpkDet/NormFeat/src/: Makefile.am  NormFeat.cpp
LIA_SpkDet/NormFeatWindowMode/: Makefile
LIA_SpkDet/NormFeatWindowMode/src/: Makefile.am
LIA_SpkDet/RemoteSpkDet/: Makefile.am  SpkDet Server Communication Protocol.html  doxygen.cfg  spro4_fft.c.patch
LIA_SpkDet/RemoteSpkDet/src/: Makefile.am  SpkDetServer.cfg  SpkDetServer.cpp  SpkDetServerMain.cpp  config.loc
LIA_SpkDet/ShiftedDeltaFeat/src/: Makefile.am  ShiftedDeltaFeat.cpp
LIA_SpkDet/SpkAdapt/src/: Makefile.am  SpkAdapt.cpp  SpkAdapt.h
LIA_SpkDet/TotalVariability/src/: Makefile.am  TotalVariability.cpp  TotalVariabilityMain.cpp
LIA_SpkSeg/ReSegmentation/: Makefile  Makefile.in
LIA_SpkSeg/ReSegmentation/src/: Makefile.am  ReSegmentationMain.cpp
LIA_SpkTools/: Makefile
LIA_SpkTools/include/: AccumulateJFAStat.h  AccumulateStat.h  AccumulateTVStat.h  FactorAnalysis.h  FileInfo.h  GeneralTools.h  Hmm.h  IOFormat.h  PldaTools.h  SegTools.h  SuperVectors.h  TopGauss.h  TrainTools.h  UnsupervisedTools.h  liatools.h
LIA_SpkTools/src/: AccumulateJFAStat.cpp  AccumulateStat.h  AccumulateTVStat.cpp  ClusteringCriterion.cpp  ClusteringCriterion.h  FactorAnalysis.cpp  FactorAnalysis.h  FileInfo.cpp  FileInfo.h  GeneralTools.cpp  GeneralTools.h  IOFormat.cpp  Makefile.am  PldaTools.cpp  ScoreWarp.cpp  ScoreWarp.h  SegTools.cpp  Tools.cpp  TopGauss.cpp  TrainTools.cpp  UnsupervisedTools.cpp  UnsupervisedTools.h  liatools.cpp
LIA_Utils/: Makefile  Makefile.am
LIA_Utils/BNGram/src/: BNGram.cpp  Makefile.am
LIA_Utils/ExtractParams/src/: ExtractParams.cpp  ExtractParams.h  ExtractParamsMain.cpp  Makefile.am
LIA_Utils/LabelFusion/: Makefile
LIA_Utils/LabelFusion/src/: LabelFusion.cpp  Makefile.am
LIA_Utils/LabelNGram/src/: LabelNGram.cpp  LabelNGramMain.cpp  Makefile.am
LIA_Utils/ReadModel/src/: Makefile.am
LIA_Utils/Scoring/src/: Makefile.am  Scoring.cpp  ScoringMain.cpp
LIA_Utils/Svm/: Makefile
LIA_Utils/TimeCluster/src/: Makefile.am  TimeClusterMain.cpp
include/: Makefile.am
include/Eigen/: Makefile.am
include/Eigen/src/: Makefile.am
trunk/: AUTHORS  INSTALL  LIA_RAL.sln  LIA_RAL_2005.sln  Makefile  Makefile.am  README  config.txt  config.txt.ex  configure.in  doxygen.cfg  install.sh
trunk/LIA_RAL/: config.txt  config.txt.ex  install.sh
trunk/LIA_SpkDet/: Makefile.am
trunk/LIA_SpkDet/EigenVoice/src/: EigenVoiceMain.cpp  Makefile.am
trunk/LIA_SpkDet/EstimateDMatrix/src/: EstimateDMatrix.cpp  EstimateDMatrixMain.cpp  Makefile.am
trunk/LIA_SpkDet/IvNorm/src/: IvNorm.cpp  IvNormMain.cpp  Makefile.am
trunk/LIA_SpkDet/IvTest/src/: IvTest.cpp  IvTestMain.cpp  Makefile.am
trunk/LIA_SpkDet/PLDA/src/: Makefile.am
trunk/LIA_SpkSeg/: Makefile.am
trunk/LIA_Utils/: Makefile.am
trunk/doc/: DOC_LIA_RAL.sty  Makefile  doc_SpkSeg.tex
trunk/wincfg/: BNGram_2005.vcproj  BNGram_2005.vcxproj  BNGram_2010.vcxproj  ComputeJFAStats_2005.vcxproj  ComputeJFAStats_2010.vcxproj  ComputeJFAStats_2010.vcxproj.filters  ComputeNorm_2005.vcproj  ComputeTest_2005.vcproj  ComputeTest_2005.vcxproj.filters  ComputeTest_2010.vcxproj  CovIntra_2005.vcxproj  EigenChannel_2005.vcxproj  EigenChannel_2010.vcxproj  EigenChannel_2010.vcxproj.filters  EigenVoice_2005.vcproj  EigenVoice_2010.vcxproj  EnergyDetector_2005.vcxproj  EnergyDetector_2005.vcxproj.filters  EnergyDetector_2010.vcxproj  EnergyDetector_2010.vcxproj.filters  EstimateDMatrix_2005.vcproj  ExtractParams_2005.vcxproj.filters  ExtractParams_2010.vcxproj  FusionScore_2005.vcxproj.filters  GmmTokenizer_2005.vcproj  GmmTokenizer_2010.vcxproj  GmmTokenizer_2010.vcxproj.filters  Hist_2005.vcproj  Hist_2005.vcxproj.filters  Hist_2010.vcxproj  IvExtractor_2010.vcxproj  IvExtractor_2010.vcxproj.filters  IvNorm_2010.vcxproj  IvTest_2010.vcxproj  IvTest_2010.vcxproj.filters  LabelFusion_2005.vcxproj  NAPSV_2005.vcproj  (+44 more)
wincfg/: BNGram_2005.vcxproj.filters  BNGram_2010.vcxproj.filters  ComputeJFAStats_2005.vcproj  ComputeJFAStats_2005.vcxproj.filters  ComputeNorm_2005.vcxproj  ComputeNorm_2005.vcxproj.filters  ComputeNorm_2010.vcxproj  ComputeNorm_2010.vcxproj.filters  ComputeTest_2005.vcxproj  ComputeTest_2010.vcxproj.filters  CovIntra_2005.vcproj  CovIntra_2005.vcxproj.filters  EigenChannel_2005.vcproj  EigenChannel_2005.vcxproj.filters  EigenVoice_2005.vcxproj  EigenVoice_2005.vcxproj.filters  EigenVoice_2010.vcxproj.filters  EnergyDetector_2005.vcproj  EstimateDMatrix_2005.vcxproj  EstimateDMatrix_2005.vcxproj.filters  EstimateDMatrix_2010.vcxproj  EstimateDMatrix_2010.vcxproj.filters  ExtractParams_2005.vcproj  ExtractParams_2005.vcxproj  ExtractParams_2010.vcxproj.filters  FusionScore_2005.vcproj  FusionScore_2005.vcxproj  FusionScore_2010.vcxproj  FusionScore_2010.vcxproj.filters  GmmTokenizer_2005.vcxproj  GmmTokenizer_2005.vcxproj.filters  Hist_2005.vcxproj  Hist_2010.vcxproj.filters  IvNorm_2010.vcxproj.filters  LabelFusion_2005.vcproj  LabelFusion_2005.vcxproj.filters  LabelFusion_2010.vcxproj  LabelNGram_2005.vcproj  LabelNGram_2005.vcxproj  LabelNGram_2010.vcxproj  (+50 more)
(+405 files in other folders)
